fix IE6 fields wrapping to next line
git-svn-id: svn://svn.orangeleap.com/tangerine/mpower/trunk@1508 0f581344-5646-3a48-8ded-616bfea576c6

--- a/war/css/forms.css
+++ b/war/css/forms.css
@@ -21,7 +21,7 @@ ul.formFields li.side label.desc {
 }
 ul.formFields li.side input,
 ul.formFields li.side select {
-	/*float:left;*/
+	float:left;
 	width:66%;
 }
 ul.formFields li.side select {
